--- a/index.html
+++ b/index.html
@@ -1,57 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sklep z artykułami</title>
+	<title>Sklep CyberPunk</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<header>
-		<h1>Sklep z artykułami</h1>
 		<nav>
 			<ul>
 				<li><a href="#">Strona główna</a></li>
 				<li><a href="#">Oferta</a></li>
-				<li><a href="#">Kontakt</a></li>
+				<li><a href="#">Koszyk</a></li>
 			</ul>
 		</nav>
 	</header>
 
 	<main>
-		<section class="articles">
-			<h2>Najnowsze artykuły</h2>
-
-			<article class="article">
-				<h3>Artykuł 1</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis vestibulum nulla. Ut nec rutrum justo. Vivamus id mauris id elit convallis hendrerit. Mauris ac eros quis magna consectetur venenatis.</p>
-				<p>Cena: 19,99 zł</p>
-				<button>Dodaj do koszyka</button>
-			</article>
-
-			<article class="article">
-				<h3>Artykuł 2</h3>
-				<p>Nullam posuere enim non nibh rhoncus, eu sodales ex fringilla. Aenean iaculis posuere justo, id sagittis nisl congue et. Etiam posuere eu ipsum in lobortis.</p>
-				<p>Cena: 29,99 zł</p>
-				<button>Dodaj do koszyka</button>
-			</article>
-
-			<!-- Tutaj umieszczamy kolejne artykuły -->
-
+		<section class="hero">
+			<h1>Witaj w naszym sklepie internetowym</h1>
+			<p>Znajdziesz u nas najlepsze produkty z gatunku cyberpunk</p>
+			<a href="#" class="button">Zobacz ofertę</a>
 		</section>
 
-		<aside class="cart">
-			<h3>Koszyk</h3>
+		<section class="products">
+			<h2>Nasza oferta</h2>
 			<ul>
-				<li>Artykuł 1 - 19,99 zł</li>
-				<li>Artykuł 2 - 29,99 zł</li>
-				<!-- Tutaj umieszczamy wybrane artykuły z koszyka -->
+				<li>
+					<img src="product1.jpg" alt="Produkt 1">
+					<h3>Produkt 1</h3>
+					<p>Cena: 100 zł</p>
+					<a href="#" class="button">Dodaj do koszyka</a>
+				</li>
+				<li>
+					<img src="product2.jpg" alt="Produkt 2">
+					<h3>Produkt 2</h3>
+					<p>Cena: 200 zł</p>
+					<a href="#" class="button">Dodaj do koszyka</a>
+				</li>
+				<li>
+					<img src="product3.jpg" alt="Produkt 3">
+					<h3>Produkt 3</h3>
+					<p>Cena: 150 zł</p>
+					<a href="#" class="button">Dodaj do koszyka</a>
+				</li>
 			</ul>
-			<p>Suma: 49,98 zł</p>
-			<button>Zamów</button>
-		</aside>
+		</section>
 	</main>
 
 	<footer>
-		<p>Sklep z artykułami &copy; 2023</p>
+		<p>Copyright &copy; 2023 Sklep CyberPunk</p>
 	</footer>
 </body>
 </html>
