--- a/index.html
+++ b/index.html
@@ -1,54 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Sklep CyberPunk</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-	<header>
-		<nav>
-			<ul>
-				<li><a href="#">Strona główna</a></li>
-				<li><a href="#">Oferta</a></li>
-				<li><a href="#">Koszyk</a></li>
-			</ul>
-		</nav>
-	</header>
-
-	<main>
-		<section class="hero">
-			<h1>Witaj w naszym sklepie internetowym</h1>
-			<p>Znajdziesz u nas najlepsze produkty z gatunku cyberpunk</p>
-			<a href="#" class="button">Zobacz ofertę</a>
-		</section>
-
-		<section class="products">
-			<h2>Nasza oferta</h2>
-			<ul>
-				<li>
-					<img src="product1.jpg" alt="Produkt 1">
-					<h3>Produkt 1</h3>
-					<p>Cena: 100 zł</p>
-					<a href="#" class="button">Dodaj do koszyka</a>
-				</li>
-				<li>
-					<img src="product2.jpg" alt="Produkt 2">
-					<h3>Produkt 2</h3>
-					<p>Cena: 200 zł</p>
-					<a href="#" class="button">Dodaj do koszyka</a>
-				</li>
-				<li>
-					<img src="product3.jpg" alt="Produkt 3">
-					<h3>Produkt 3</h3>
-					<p>Cena: 150 zł</p>
-					<a href="#" class="button">Dodaj do koszyka</a>
-				</li>
-			</ul>
-		</section>
-	</main>
-
-	<footer>
-		<p>Copyright &copy; 2023 Sklep CyberPunk</p>
-	</footer>
-</body>
+  <head>
+    <title>Cyber Punk Shop</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+      <h1>Cyber Punk Shop</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Produkty</a></li>
+          <li><a href="#">O nas</a></li>
+          <li><a href="#">Kontakt</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2>Produkty</h2>
+        <ul>
+          <li>
+            <img src="product1.jpg" alt="Produkt 1">
+            <h3>Produkt 1</h3>
+            <p>Cena: 99,99 zł</p>
+            <button>Dodaj do koszyka</button>
+          </li>
+          <li>
+            <img src="product2.jpg" alt="Produkt 2">
+            <h3>Produkt 2</h3>
+            <p>Cena: 149,99 zł</p>
+            <button>Dodaj do koszyka</button>
+          </li>
+          <li>
+            <img src="product3.jpg" alt="Produkt 3">
+            <h3>Produkt 3</h3>
+            <p>Cena: 199,99 zł</p>
+            <button>Dodaj do koszyka</button>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2023 Cyber Punk Shop</p>
+    </footer>
+  </body>
 </html>
